--- a/sample.toml
+++ b/sample.toml
@@ -1,5 +1,3 @@
-[api]
-# Account key
-api_key = ""
-# Account token
-access_token = ""
+[authentication]
+client_id     = "your_id"
+client_secret = "your_secret"
