--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ go:
 git:
   depth: 1
 
-# Don't email me the results of the test runs.
+# E-mail me the results of the test runs.
 notifications:
-  email: false
+  email: true
 
 # script always runs to completion (set +e). If we have linter issues AND a
 # failing test, we want to see both. Configure golangci-lint with a
