--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ notifications:
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
 script:
+  - go mod init
   - go test -v -race ./... # Run all the tests with the race detector enabled
