--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: go
 
 # Force-enable Go modules. This will be unnecessary when Go 1.12 lands.
 env:
-  - GO111MODULE=on
+  - GO111MODULE=auto
 
 # You don't need to test on very old version of the Go compiler. It's the user's
 # responsibility to keep their compilers up to date.
@@ -25,5 +25,4 @@ notifications:
 # failing test, we want to see both. Configure golangci-lint with a
 # .golangci.yml file at the top level of your repo.
 script:
-  - go mod init
   - go test -v -race ./... # Run all the tests with the race detector enabled
